<resources>
    <string name="app_name">Wallet Story</string>
    <string name="title_main">Overview</string>
    <string name="slide_1_img">slide_1_img</string>
    <string name="slide_1_title">WELCOME !</string>
    <string name="slide_1_desc">This is the Wallet Story .</string>
    <string name="slide_2_img">slide_2_img</string>
    <string name="slide_2_title">Can we help you ?</string>
    <string name="slide_2_desc">Wallet Story can manage your personal finance .</string>
    <string name="slide_3_img">slide_3_img</string>
    <string name="slide_3_title">REGISTER </string>
    <string name="slide_3_desc">Enter your name</string>
    <string name="Next">NEXT</string>
    <string name="Skip">SKIP</string>
    <string name="Start">GOT IT</string>
    <string name="user_name">Panadda K.</string>
    <string name="user_email">gifts2giftpnd@gmail.com</string>
    <string name="transaction_menu">Transactions</string>
    <string name="categories_menu">Categories</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>
    <string name="categories_image">Categories_img</string>
    <string name="categories_title">Categories Title 01</string>
    <string name="title_activity_categories">Categories</string>
    <string name="img_expenses">img_expenses</string>
    <string name="new_category">New Category</string>
    <string name="category_name">Category Name</string>
    <string name="category_img">category_image</string>
    <string name="close">Close</string>
    <string name="title_activity_add_category">Add Category</string>
    <string name="expense">Expense</string>
    <string name="date">Date</string>
    <string name="category_icon_imgbtn">Category image button</string>
    <string name="income">Income</string>
    <string name="save">Save</string>
    <string name="date_imgview">date_imageview</string>
    <string name="money_imgview">money_imageview</string>
    <string name="category">Category</string>
    <string name="cancel">Cancel</string>
    <string name="costs">Costs</string>
    <string name="category_imgview">category_imageview</string>
    <string name="note">Note</string>
    <string name="dd">Day</string>
    <string name="yyyy">Year</string>
    <string name="mm">Month</string>
    <string name="title_activity_transaction">Transactions</string>
</resources>
