<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen1">


    <ImageView
        android:id="@+id/slide_1_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:srcCompat="@mipmap/heart3" android:contentDescription="@string/slide_1_img" />

    <TextView
        android:id="@+id/slide_1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slide_1_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#ffff"
        android:textSize="30sp"
        android:text="@string/slide_1_title" />

    <TextView
        android:id="@+id/slide_1_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slide_1_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="#ffff"
        android:textSize="22sp"
        android:text="@string/slide_1_desc" />
</RelativeLayout>