<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen2">


    <ImageView
        android:id="@+id/slide_2_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:srcCompat="@mipmap/coins"
        android:contentDescription="@string/slide_2_img" />

    <TextView
        android:id="@+id/slide_2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/slide_2_img"
        android:layout_marginTop="50dp"
        android:textColor="#ffdd00"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/slide_2_title" />

    <TextView
        android:id="@+id/slide_2_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slide_2_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="#ffff"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/slide_2_desc" />

</RelativeLayout>