<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.x.walletstory.AddCategoryActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/appBarLayout"
        android:layout_marginTop="64dp">


        <EditText
            android:id="@+id/category_input"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/category_name"
            android:inputType="text"
            app:backgroundTint="#c9c9c9" />

        <RadioGroup
            android:id="@+id/radio_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="140dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/income_radiobtn"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/income"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/expense_radiobtn"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/expense"
                android:textSize="18sp" />

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="200dp"
            android:background="@android:color/transparent"
            android:text="@string/save"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:onClick="saveCategory"/>

        <ImageButton
            android:id="@+id/category_imgbtn"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/category_icon_imgbtn"
            android:src="@mipmap/question"
            android:onClick="addIcon"/>


    </android.support.v7.widget.CardView>


</RelativeLayout>
